<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="6dp"
    android:paddingEnd="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/m_f3_settings_lin1"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardElevation="0dp"
                android:elevation="0dp"
                app:cardMaxElevation="0dp"
                app:cardCornerRadius="25dp"
                app:cardBackgroundColor="@color/keep">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_f3_keep"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:theme="@style/index_text_bottom3"
                android:text="@string/app_f3_keep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="6dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/m_f3_settings_lin2"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardElevation="0dp"
                android:elevation="0dp"
                app:cardMaxElevation="0dp"
                app:cardCornerRadius="25dp"
                app:cardBackgroundColor="@color/download">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_f3_download"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:theme="@style/index_text_bottom3"
                android:text="@string/app_f3_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="6dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/m_f3_settings_lin3"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardElevation="0dp"
                android:elevation="0dp"
                app:cardMaxElevation="0dp"
                app:cardCornerRadius="25dp"
                app:cardBackgroundColor="@color/history">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_f3_history"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:theme="@style/index_text_bottom3"
                android:text="@string/app_f3_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="6dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/m_f3_settings_lin4"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardElevation="0dp"
                android:elevation="0dp"
                app:cardMaxElevation="0dp"
                app:cardCornerRadius="25dp"
                app:cardBackgroundColor="@color/settings">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_f3_setting"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:theme="@style/index_text_bottom3"
                android:text="@string/app_f3_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="6dp"/>


        </LinearLayout>




    </LinearLayout>


    <TextView android:theme="@style/index_text_bottom1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_f3_title"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="6dp"/>



</LinearLayout>